feat: переход на многомодульную структуру и реализация системы заказов
- Перевел проект на многомодульную структуру Gradle (user, product, cart, order).
- Реализовал сервис заказов с поддержкой списания остатков (пессимистические блокировки).
- Внедрил паттерн Transactional Outbox для надежной доставки событий в Kafka.
- Реализовал асинхронную хореографию: автоматическая очистка корзины при создании заказа.
- Добавил механизм локальной компенсации остатков при сбоях в базе данных.
- Внедрил использование UUID в Outbox для децентрализованной генерации ID и дедупликации.
- Настроил Docker Compose для инфраструктуры Kafka.
- Добавил swagger
- Обновил readme